[package]
name = "lenso-platform-module"
version = "0.1.1"
edition.workspace = true
license = "MIT"
description = "Module behavior seams for the Lenso backend framework."
repository = "https://github.com/LioRael/lenso"
homepage = "https://github.com/LioRael/lenso"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "modules"]
rust-version.workspace = true

[lib]
name = "platform_module"
path = "src/lib.rs"

[dependencies]
lenso-contracts.workspace = true
platform-core.workspace = true
platform-http.workspace = true
platform-runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
utoipa.workspace = true

[lints]
workspace = true
