[package]
name = "lenso-platform-runtime"
version = "0.1.10"
edition.workspace = true
license = "MIT"
description = "Runtime function primitives for the Lenso backend framework."
repository = "https://github.com/LioRael/lenso"
homepage = "https://github.com/LioRael/lenso"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "runtime"]
rust-version.workspace = true

[lib]
name = "platform_runtime"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
lenso-contracts.workspace = true
platform-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
platform-testing.workspace = true
tokio.workspace = true

[lints]
workspace = true
