[package]
name = "platform-testing"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
platform-core.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true

[lints]
workspace = true
