[package]
name = "lenso-platform-testing"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "Test support utilities for the Lenso backend framework."
repository = "https://github.com/LioRael/lenso"
homepage = "https://github.com/LioRael/lenso"
categories = ["development-tools::testing", "web-programming"]
keywords = ["backend", "framework", "testing"]
rust-version.workspace = true

[lib]
name = "platform_testing"
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
platform-core.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true

[lints]
workspace = true
