[package]
name = "identity"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
platform-core.workspace = true
platform-domain.workspace = true
platform-module.workspace = true
platform-http.workspace = true
platform-runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
uuid.workspace = true

[dev-dependencies]
platform-testing.workspace = true
platform-runtime.workspace = true
tokio.workspace = true

[lints]
workspace = true
