[package]
name = "notifications"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
platform-core.workspace = true
platform-runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
platform-testing.workspace = true
sqlx.workspace = true
tokio.workspace = true

[lints]
workspace = true
