[package]
name = "remote-module-example"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
platform-module.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic = { workspace = true, features = ["router", "server"] }
tonic-prost.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
http.workspace = true
platform-module-remote.workspace = true
tower = { workspace = true, features = ["util"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "remote-module-example"
path = "src/main.rs"

[lints]
workspace = true
