[package]
name = "auth-password"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
argon2.workspace = true
async-trait.workspace = true
auth.workspace = true
jsonwebtoken.workspace = true
axum.workspace = true
chrono.workspace = true
platform-core.workspace = true
platform-http.workspace = true
platform-module.workspace = true
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
utoipa.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
