[package]
name = "lenso-module-auth-password"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "First-party password auth module for the Lenso backend framework."
repository = "https://github.com/LioRael/lenso"
homepage = "https://github.com/LioRael/lenso"
categories = ["web-programming", "authentication"]
keywords = ["backend", "framework", "auth"]
rust-version.workspace = true

[lib]
name = "auth_password"
path = "src/lib.rs"

[dependencies]
argon2.workspace = true
async-trait.workspace = true
auth.workspace = true
jsonwebtoken.workspace = true
axum.workspace = true
chrono.workspace = true
platform-core.workspace = true
platform-http.workspace = true
platform-module.workspace = true
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
utoipa.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
