[package]
name = "auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
platform-core.workspace = true
platform-http.workspace = true
platform-module.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tracing.workspace = true
utoipa.workspace = true

[dev-dependencies]
platform-testing.workspace = true
platform-runtime.workspace = true
tokio.workspace = true

[lints]
workspace = true
