[package]
name = "lenso-module-story"
version = "0.1.10"
edition.workspace = true
license = "MIT"
description = "First-party runtime story module for the Lenso backend framework."
repository = "https://github.com/LioRael/lenso"
homepage = "https://github.com/LioRael/lenso"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "modules"]
rust-version.workspace = true

[lib]
name = "story"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
lenso-service.workspace = true
platform-core.workspace = true
platform-http.workspace = true
platform-module.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
utoipa.workspace = true

[dev-dependencies]
lenso-autonomous-service.workspace = true
platform-testing.workspace = true
tokio.workspace = true
tower.workspace = true
utoipa-axum.workspace = true

[lints]
workspace = true
