[workspace]

[package]
name = "lenso-starter-host"
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.94"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
anyhow = "1.0"
app-api = { git = "https://github.com/LioRael/lenso", branch = "main", package = "app-api" }
app-bootstrap = { git = "https://github.com/LioRael/lenso", branch = "main", package = "app-bootstrap" }
axum = "0.8"
platform-admin = { git = "https://github.com/LioRael/lenso", branch = "main", package = "platform-admin" }
platform-admin-data = { git = "https://github.com/LioRael/lenso", branch = "main", package = "platform-admin-data" }
platform-core = { git = "https://github.com/LioRael/lenso", branch = "main", package = "platform-core" }
platform-module-remote = { git = "https://github.com/LioRael/lenso", branch = "main", package = "platform-module-remote" }
platform-runtime = { git = "https://github.com/LioRael/lenso", branch = "main", package = "platform-runtime" }
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
