[workspace]

[package]
name = "lenso-starter-host"
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.94"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
anyhow = "1.0"
app-api = { git = "https://github.com/LioRael/lenso", branch = "main", package = "app-api" }
app-migrate = { git = "https://github.com/LioRael/lenso", branch = "main", package = "app-migrate" }
app-worker = { git = "https://github.com/LioRael/lenso", branch = "main", package = "app-worker" }
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
