[package]
name = "arch-check"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
app-api.workspace = true
generate-contracts.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[lints]
workspace = true
